Fix the overflow issue for filter

--- a/server/src/public/app/@theme/components/listing/listing.component.scss
+++ b/server/src/public/app/@theme/components/listing/listing.component.scss
@@ -40,7 +40,7 @@
       position: relative;
       .listing-filter-holder {
         display: flex !important;
-        overflow-x: auto;
+        overflow-x: visible;
         width: 100%;
         background-color: #fff;
         &.selected {
